app/src/test/resources/programs/invalid/conditionals/ifWithoutElseEvaluateToInt.extension
// 'if' without 'else' but 'then' block does not evaluate to '()'
foo main() -> Int = {
    let mut x: Int = 0;
    if true then {
        x = 1;
        x
    }
    x
}
